# OpenGL-Samples

./: .gitignore  CMakeLists.txt  README.MD
base/: CMakeLists.txt  GLContext.hpp  GLImpl.cpp  GLImpl.hpp  benchmark.hpp  camera.hpp  demo.cpp  demo.hpp  logger.hpp  mesh.cpp  mesh.hpp  shader_program.hpp  texture.hpp
examples/: CMakeLists.txt  common.hpp
examples/ASR/: CMakeLists.txt  atmosphere.hpp  main.cpp
examples/ASR/glsl/: aerial_lut.comp  imgui.ini  mesh.frag  mesh.vert  multiscattering.comp  quad.vert  sky.frag  sky_lut.frag  sun.frag  sun.vert  transmittance.comp
examples/Bloom/: CMakeLists.txt
examples/Bloom/shader/: bloom.frag  blur.frag  brightness.frag  composite.frag  light.frag  light.vert  screenquad.vert
examples/Bloom/src/: main.cpp
examples/CUDAGLVolumetricPathTracer/: CMakeLists.txt
examples/CUDAGLVolumetricPathTracer/src/: cuda_helper.hpp  main.cpp  volume_kernel.cu  volume_kernel.cuh
examples/ClusteredShading/: CMakeLists.txt
examples/ClusteredShading/src/: main.cpp
examples/ColorGrading/: CMakeLists.txt  lut.hpp  main.cpp
examples/ColorGrading/glsl/: quad.vert
examples/IBL/: CMakeLists.txt  README.MD
examples/IBL/shader/: background_f.glsl  brdf_f.glsl  brdf_v.glsl  cube_map_v.glsl  direct_pbr_f.glsl  direct_pbr_v.glsl  equirectangular2cubemap_f.glsl  ibl_pbr_f.glsl  irradiance_convolution_f.glsl  prefilter_f.glsl
examples/IBL/src/: main.cpp
examples/Kulla-ContyBRDF/: CMakeLists.txt
examples/Kulla-ContyBRDF/lut-gen/: Eavg_MC.cpp  Emu_IS.cpp  Emu_MC.cpp
examples/Kulla-ContyBRDF/shader/: kulla_conty_pbr_f.glsl
examples/Kulla-ContyBRDF/src/: main.cpp
examples/NaiveVolumetricAtmospheric/: CMakeLists.txt
examples/NaiveVolumetricAtmospheric/shader/: atmospheric_scattering_test.frag  atmospheric_scattering_test.vert
examples/NaiveVolumetricAtmospheric/src/: main.cpp
examples/ObjView/: CMakeLists.txt  main.cpp
examples/ObjView/glsl/: imgui.ini  mesh.frag
examples/PRT/: CMakeLists.txt
examples/PRT/precompute/prt/scenes/: prt.exr
examples/PRT/precompute/prt/scenes/cubemap/CornellBox/: transport.txt
examples/PRT/precompute/prt/scenes/cubemap/GraceCathedral/: transport.txt
examples/PRT/precompute/prt/scenes/cubemap/Indoor/: transport.txt
examples/PRT/precompute/prt/scenes/cubemap/Skybox/: transport.txt
examples/PRT/precompute/prt/src/: prt.cpp
examples/PRT/renderer/: CMakeLists.txt
examples/PRT/renderer/shader/: background_f.glsl  prt_f.glsl  prt_v.glsl
examples/PRT/renderer/src/: main.cpp
examples/RTRTDenoiser/: CMakeLists.txt  README.MD
examples/RTRTDenoiser/src/: denoiser.cpp  denoiser.h  main.cpp
examples/SSRT/: CMakeLists.txt  README.MD
examples/SSRT/shader/: composite_f.glsl  direct_shading_f.glsl  direct_shading_v.glsl  g_buffer_f.glsl  g_buffer_v.glsl  indirect_shading_f.glsl  screen_shading_f.glsl  shadow_f.glsl  shadow_v.glsl
examples/SSRT/src/: main.cpp
examples/ShadowMap/: CMakeLists.txt  main.cpp
examples/ShadowMap/shader/: phong_f.glsl  phong_v.glsl  shadow_f.glsl  shadow_v.glsl
examples/VolumeCloud/: CMakeLists.txt  main.cpp
examples/VolumeCloud/glsl/: cloud.frag  mesh.frag  mesh.vert  post_process.frag  skybox.frag  skybox.vert
examples/shadowmap/: CMakeLists.txt  main.cpp
examples/shadowmap/shader/: phong_f.glsl
examples/test/: CMakeLists.txt  line_shader_f.glsl  line_shader_v.glsl  test_glcontext.cpp
examples/tinyobjloader/: CMakeLists.txt  camera.hpp  main.cpp
examples/tinyobjloader/shader/: mesh_shading_f.glsl  mesh_shading_v.glsl
