
add_subdirectory(ShadowMap)

add_subdirectory(RTRTDenoiser)

add_subdirectory(SSRT)

add_subdirectory(IBL)

add_subdirectory(PRT)

add_subdirectory(Kulla-ContyBRDF)

add_subdirectory(NaiveVolumetricAtmospheric)

add_subdirectory(Bloom)

add_subdirectory(CUDAGLVolumetricPathTracer)

add_subdirectory(ClusteredShading)

add_subdirectory(ASR)

add_subdirectory(VolumeCloud)

add_subdirectory(ColorGrading)

add_subdirectory(ObjView)